--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,6 @@
 * {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -10,4 +12,25 @@ body {
   height: 100vh;
   overflow: hidden;
   margin: 0;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  max-width: 400px;
+}
+
+.squaer {
+  width: 16px;
+  height: 16px;
+  margin: 2px;
+  background-color: #1d1d1d;
+  box-shadow: 0 0 2px #000;
+  transition: 2s ease;
+}
+
+.squaer:hover {
+  transition-duration: 0s;
 }
